Fix main layout's height on mobile devices

--- a/src/layouts/MainLayout/styles.css
+++ b/src/layouts/MainLayout/styles.css
@@ -18,6 +18,6 @@
 
 @media screen and (max-width: 600px) {
   .main {
-    height: calc(100vh - 107px);
+    height: calc(100vh - 157px);
   }
 }
